<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="total">Total: </string>
    <string name="each">Pay: </string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="no_svs">no svs</string>
    <string name="no_gst">no gst</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Method</string>
    <string name="via">Via</string>
    <string name="_0_00">$0.00</string>
</resources>